fix info spacing due to dl refactor

--- a/assets/less/sugar/component/content.less
+++ b/assets/less/sugar/component/content.less
@@ -4,14 +4,14 @@
 
 .content {
     background: @white;
-    border-left: 1px solid @silver;
-    border-bottom: 2px solid @silver;
+    border-bottom: 1px solid @silver;
     border-top: 1px solid @silver;
+    border-radius: 0;
     box-shadow: -3px 3px 3px -2px @white-darker;
     
-    border-radius: 0px 0px 0px 5px;
     display: inline-block;
-    .margin(0);
-    .padding(@base-spacing-unit);
+    margin: 0;
+    padding: 0;
     position: relative;
+    width: 100%;
 }
