--- a/assets/less/sugar/component/info.less
+++ b/assets/less/sugar/component/info.less
@@ -14,8 +14,8 @@
             .margin-left(@quarter-spacing-unit);
         }
     }
-    @media (min-width: @screen-l-min) { .margin-left(@double-spacing-unit - @quarter-spacing-unit); }
-    @media (min-width: @screen-w-min) { .margin-left(@sextuple-spacing-unit); }
+    @media (min-width: @screen-l-min) { .margin-left(@triple-spacing-unit); }
+    @media (min-width: @screen-w-min) { .margin-left(@octuple-spacing-unit + @half-spacing-unit); }
 }
 
 .info-stats {
